<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>mavlink_driver</name>
 <version>1.0.0</version>
 <description>Interface that converts mavlink data to ROS2 messages and TFs</description>
 <author email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</author>
 <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
 <license>BSD 3-Clause License</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <!-- Packages Dependencies -->
 <depend>rclcpp</depend>
 <depend>rclcpp_action</depend>
 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>

 <depend>thrust_curves</depend>
 <depend>pegasus_msgs</depend>
 <depend>pegasus_utils</depend>

 <!-- Pegasus External dependencies -->
 <depend>mavsdk_vendor</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_cmake_copyright</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
 
</package>